# TIDE

./: .gitignore  README.md
NsttDataset/: README.md  pyproject.toml
NsttDataset/wiki_yt_dataset/: __main__.py
NsttDataset/wiki_yt_dataset/config/: logger.py
NsttDataset/wiki_yt_dataset/download_extract_wiki/: README.md  __init__.py  download_wiki_dumps.py  extract_wiki_dumps.py
SpeechRecognizerCore/: .gitignore  README.md  flow-diagram.drawio  main.py  pipeline.py  pyproject.toml
SpeechRecognizerCore/azure_blob_storage/: README.md  __init__.py  azure_config.py  azure_worker.py
SpeechRecognizerCore/config/: logger.py  variables.py
SpeechRecognizerCore/converter_to_wav/: README.md  __init__.py  __main__.py
SpeechRecognizerCore/converter_to_wav/utils/: converter.py
SpeechRecognizerCore/csv_parser/: __main__.py
SpeechRecognizerCore/denoise/: README.md  __init__.py  __main__.py  data_tools.py  denoise.py  load_model.py  settings_tools.py
SpeechRecognizerCore/denoise/weights/: model_unet.json
SpeechRecognizerCore/diarization/: README.md  __init__.py  __main__.py  diarization.py  load_model.py
SpeechRecognizerCore/language_identification/: README.md  __init__.py  __main__.py
SpeechRecognizerCore/language_identification/config/: lid_config.py
SpeechRecognizerCore/language_identification/models/: lid_model.py
SpeechRecognizerCore/language_identification/utils/: data_loader.py  spectrogram.py
SpeechRecognizerCore/settings/: ui_default_settings.json
SpeechRecognizerCore/settings/language_identification/: config.yml
SpeechRecognizerCore/source_recognizer/: README.md  __init__.py  __main__.py  settings.py  source_recognizer.py
SpeechRecognizerCore/sources/: response.py
SpeechRecognizerCore/speech_recognizer/: README.md  __init__.py  __main__.py  config.py  speech_recognizer.py  speech_ways.py
SpeechRecognizerCore/web/: file.html  logs.html  main.html  session.html  settings.html  spy.html
SpeechRecognizerCore/web/css/: accordion.css  file.css  logs.css  main.css  modal.css  normalize.css  session.css  settings.css  spy.css  style.css  vars.css
SpeechRecognizerCore/web/expose/: analytics.py  azure.py  file_diaolog.py  file_worker.py  (+4 more)
(+68 files in other folders)
